--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
-theme = "pickles"
+baseURL = "https://i524.github.io/"
+languageCode = "ja-jp"
+title = "1日1時間"
+theme = "simpleness"
+publishDir = "docs"
